reemplazo de apostrofes

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -33,10 +33,10 @@
                 <a class="nav-link active" aria-current="page" href="../pages/sucursales.html">SUCURSALES</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/sobre´nosotros.html">SOBRE NOSOTROS</a>
+                <a class="nav-link active" aria-current="page" href="../pages/sobre-nosotros.html">SOBRE NOSOTROS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/trabaja´con´nosotros.html">TRABAJA CON NOSOTROS</a>
+                <a class="nav-link active" aria-current="page" href="../pages/trabaja-con-nosotros.html">TRABAJA CON NOSOTROS</a>
               </li>
             </ul>
           </div>
